<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food!Go</string>
    <string name="hello_blank_fragment">Hello, Blank Fragment!</string>

    <string name="title_activity_maps1">Maps1Activity</string>

    <string name="home_message">Arriverez vous à retrouver tous les foodies sur la carte ?</string>
    <string name="play_message">JOUER</string>
    <string name="findFoodi">Repére une foodie sur la carte et pars à sa recherche pour la prendre en photo </string>

    <string name="score_initial">0 XP</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="ananasPoints">+100xp</string>
    <string name="ananas">Ananas</string>

    <string name="avocatPoints">+100xp</string>
    <string name="avocat">Avocat</string>

    <string name="bananePoints">+200xp</string>
    <string name="banane">Banane</string>

    <string name="pastequePoints">+200xp</string>
    <string name="pasteque">Pastèque</string>

    <string name="manguePoints">+300xp</string>
    <string name="mangue">Mangue</string>

    <string name="pommesPoints">+300xp</string>
    <string name="pommes">Pommes</string>
    <string name="messageFoodieGallery">Capture les Foodies sur la carte et collectionne leur photo pour gagner des points !</string>
    <string name="default_info_title">Sydney</string>
    <string name="default_info_snippet">Coucou ici c est Sydney</string>


    <string name="nameOfPreferencesFile">capturedFoodie</string>
    <string name="nameOfPointsSysteme">pointsSysteme</string>
    <string name="nameOfAbsolutePathPreference">absolutePathReferences</string>
    <string name="nameOfPreferencesDistances">nameOfPrefencesDistances</string>
    <string name="nameOfDidacticiel">didac</string>

    <string name="messageErrorFoodieNotcaptured">\"Ce foodie n\'a pas encore été capturé. Capture le d\'abord! \"</string>
    <string name="replay_message">REJOUER</string>
    <string name="replayQuestion">On rejoue ?</string>
    <string name="congratMessage">Bravo !</string>
    <string name="congratMessagePartTwo">Tu as attrapé tout les foodies, tu peux être fier de toi !</string>
    <string name="replayMessage">Le jeu a été réinitialisé, tu peux désormais rejouer !</string>
    <string name="YouAreHere">Vous êtes ici</string>
    <string name="stop_camera">la caméra est arretée</string>
    <string name="start_camera">la caméra est activée</string>

    <string name="settings">Distances</string>

    <string name="MaxDistance">Distance maximale de recherche</string>

    <string name="MinDistance">Distance minimale de recherche</string>
    <string name="stepToPlayMessage">Suis les étapes pour apprendre à jouer</string>
    <string name="welcomeMessage">Bienvenue dans le didacticiel</string>
    <string name="letsGoMessage">C\'est parti</string>
    <string name="nameOfGalleryActivity">Foodies</string>
    <string name="photoActivityName">Photo</string>
    <string name="reurn">Retour</string>
    <string name="carte">Carte</string>
    <string name="didacticiel">Didacticiel</string>
    <string name="fermer">Fermer</string>
    <string name="prendre_la_photo">Prendre la photo</string>
    <string name="min_distance">2</string>
    <string name="max_distance">6</string>
    <string name="modifier">Modifier</string>
    <string name="continuer">Continuer</string>
    <string name="confirmationPhoto">Le foodie a bien été pris en photo</string>




    <string name="totemTo">Choisis l\'animal à nourrir</string>
    <string name="giraffe">Giraffe</string>
    <string name="buldog">Buldog</string>
    <string name="elephant">Elephant</string>
    <string name="cheval">Cheval</string>
    <string name="Cochon">Cochon</string>
    <string name="Licorne">Licorne</string>
    <string name="totem">Votre totem</string>
    <string name="totemExplained">Sélectionnes un animal totem, puis nourris le en capturant des foodies sur la carte</string>
    <string name="nameOfPrefencesTotem">nameOfPrefencesTotem</string>
    <string name="totemKiddescription">Captures encore plus de foodies pour le voir évoluer</string>
    <string name="totemYounDescription">Ah ! Ton animal totem a encore faim 😀</string>
    <string name="totemBigDescription">Ton totem a bien mangé  😍</string>
    <string name="ShownTotemDescription"> Captures des Foodies pour lui, il a faim et a besoin de grandir 🙂</string>

</resources>