<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fond"
    tools:context=".DidicaticielActivity"
    >





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:id="@+id/logo"
                android:onClick="onClick"
                android:layout_height="70dp"
                app:srcCompat="@drawable/logov2" />

            <TextView
                android:id="@+id/points"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/style5"
                android:textColor="@color/style5"
                android:textSize="@dimen/style5"
                android:text="@string/score_initial"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="end" >
            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:onClick="onClick"
                app:srcCompat="@drawable/menu" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/style3"
            android:textSize="@dimen/style3"
            android:fontFamily="@font/style3"
            android:layout_margin="10dp"
            android:text="@string/welcomeMessage" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/style6"
            android:textSize="@dimen/style5"
            android:fontFamily="@font/style6"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/stepToPlayMessage" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewDidac"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/level_up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/style6"
            android:textSize="@dimen/style5"
            android:fontFamily="@font/style6"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/previous"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/style1"
                android:textSize="@dimen/style1"
                android:fontFamily="@font/style1"
                android:padding="0dp"

                android:layout_marginEnd="20dp"
                android:onClick="onClick"
                android:text="&lt;" />
        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/style1"
            android:textSize="@dimen/style1"
            android:fontFamily="@font/style1"
            android:paddingHorizontal="30dp"
            android:layout_marginEnd="50dp"
            android:onClick="onClick"
            android:text="@string/letsGoMessage" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>